this is second commit..and i change h1 to div

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is a Git introductory video</h1>
+    <div>
+        <h1>This is my first Git Commit</h1>
+    </div>
+
 </body>
 </html>
