--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     </div>
     <div>
         <h1>I am a Bangladeshi</h1>
+    </div>
+    <div>
         <h1>I Love Burger</h1>
     </div>
 </body>
