proffessor added again

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <h1>Heii Mr.Proffessor</h1>
-        <img src="https://pm1.narvii.com/6794/2f19e496c75173f46e70a762dce44bbcc0629698v2_00.jpg" alt="">
-    </div>
+    <h1>Heeii..Mr.Proffessor</h1>
+    <img src="https://pm1.narvii.com/6794/2f19e496c75173f46e70a762dce44bbcc0629698v2_00.jpg" alt="">
     <div>
         <h1>This is my first Git Commit</h1>
     </div>
